minor: some minor work

--- a/package.json
+++ b/package.json
@@ -20,22 +20,25 @@
     "url": "https://github.com/vzaccaria/yaml2resume/issues"
   },
   "homepage": "https://github.com/vzaccaria/yaml2resume",
-  "dependencies": {
+    "dependencies": {
+    "babel": "4.7.16",
+    "chai": "3.0.0",
+    "chai-as-promised": "5.1.0",
+    "chalk": "1.1.1",
+    "diy-build": "1.0.8",
+    "easy-table": "1.0.0",
+    "git-hist": "0.2.0",
+    "mdtable2json": "0.1.0",
+    "mocha": "2.2.5",
+    "mustache": "2.1.2",
+    "shelljs": "0.5.1",
+    "string-hash": "1.1.0",
+    "stupid-replace": "0.0.3",
+    "underscore.string": "3.2.2",
+    "xyz": "0.5.0",
+        "zaccaria-cli": "0.2.0",
     "debug": "^2.2.0",
-    "js-yaml": "^3.4.6",
-    "liquid-node": "^2.6.1",
-    "zaccaria-cli": "^0.1.1"
-  },
-  "devDependencies": {
-    "diy-build": "^1.0.8",
-    "babel": "^4.7.16",
-    "shelljs": "*",
-    "xyz": "*",
-    "mocha": "*",
-    "chai": "*",
-    "chai-as-promised": "*",
-    "mustache": "~2.1.2",
-    "stupid-replace": "~0.0.3",
-    "git-hist": "*"
+    "js-yaml": "3.4.6",
+    "liquid-node": "2.6.1"
   }
 }
