--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "man": "./man/man1/yaml2resume.1",
   "scripts": {
-    "test": "./node_modules/.bin/babel-node configure.js && make test"
+    "test": "./node_modules/.bin/babel-node configure.js && make prepare && make test"
   },
   "repository": {
     "type": "git",
